change email and name

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     },
     "authors": [
         {
-            "name": "champak",
-            "email": "champak@7span.com"
+            "name": "champakchopda",
+            "email": "champakchopda123@gmail.com"
         }
     ],
     "minimum-stability": "dev",
