--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
             "email": "champakchopda123@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": false,
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "require": {},
     "extra": {
         "laravel": {
