--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
             "email": "champakchopda123@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {},
     "extra": {
